# qsv

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  COPYING  Cargo.toml  GEMINI.md  LICENSE-MIT  README.md  _typos.toml  audit.toml  deny.toml  dotenv.template  profile3-handoff.md  silly_opendata_elves.md  tsconfig.json
.cargo/: audit.toml  config.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: perf-reviewer.md  security-reviewer.md
.claude/skills/: .gitignore  .mcp.json  AUTO_UPDATE.md  CHANGELOG.md  CHANGELOG_FILESYSTEM.md  CI.md  CLAUDE.md  CLAUDE_CODE.md  COPILOT_REVIEW_FIXES_ROUND3.md  COPILOT_REVIEW_FIXES_ROUND4.md  DESKTOP_EXTENSION.md  FILESYSTEM_USAGE.md  GEMINI.md  MCP_SEARCH_AND_DEFERRED_LOADING.md  QUICK_START_LOCAL_FILES.md  README-MCP.md  README-MCPB.md  README.md  SKILLS_README.md  UPDATE_SYSTEM_SUMMARY.md  cowork-CLAUDE.md  manifest.json  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/: copilot-instructions.md
.github/workflows/: avx512-bench.yml  bench-qsv-metadata-thp.yml  bench-qsv-stats-alloc.yml  bench-qsv-thp.yml  claude-code-review.yml  claude.yml  clear-caches.yml  devskim.yml  docs-drift.yml  github-clone-count.yml  macOS-arm64-publish.yml  macOS-arm64-selfhosted-publish-nightly.yml  macOS-arm64-selfhosted-publish-qsvpy.yml  macOS-arm64-selfhosted-publish.yml  mcp-server-ci.yml  publish-aarch64-pc-windows-msvc.yml  publish-benchmarks-wiki.yml  publish-deb-package.yml  publish-macOS-x86_64.yml  publish-nightly.yml  publish-portable.yml  publish-powerpc64le-unknown-linux-gnu.yml  publish-qsvpy-powerpc64.yml  publish-qsvpy.yml  publish-s390x-unknown-linux-gnu.yml  publish.yml  rust-beta.yml  rust-clippy.yml  rust-linux-polars.yml  rust-macos-polars.yml  rust-macos-x86.yml  rust-macos.yml  rust-musl.yml  rust-nightly-bleeding-edge.yml  rust-polars-nightly.yml  rust-polars-pinned-nightly.yml  rust-ppc64le.yml  rust-qsvdp.yml  rust-qsvlite.yml  rust-s390x.yml  (+13 more)
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  project_stats_perf_2026_06.md  qsv_architecture_analysis.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md  workflow_preferences.md
benchmarks/: Benchmarks.wiki.md  change_by_family.html  count_callout.html  freq_growth.html  gainers.html  heatmap.html  index.html  index_advantage.html  index_superpowers.html  moarstats_growth.html  sqlp_tuning.html  stats_growth.html  time_spent.html  trend.html  validate_growth.html
contrib/completions/: CLAUDE.md  Cargo.toml  README.md  completions.bash  generate_examples.bash
contrib/notebooks/: Whirlwindtour.ipynb  intro-to-count.ipynb  qsv-colab-quickstart.ipynb  qsv-describegpt-qa.ipynb  qsv_benchmark.ipynb
contrib/wix/: app.wxs
docs/: AGENT_SKILLS_COMPLETE_SUMMARY.md  AGENT_SKILLS_DESIGN.md  AGENT_SKILLS_INTEGRATION.md  AGENT_SKILLS_POC_SUMMARY.md  AGENT_SKILLS_TEST_EXAMPLES.md  BENCHMARKS.md  COMMAND_DEPENDENCIES.md  Describegpt.md  ENVIRONMENT_VARIABLES.md  FEATURES.md  Fetch.md  INTERPRETERS.md  Logging.md  PERFORMANCE.md  PERFORMANCE_TLDR.md  STATS_DEFINITIONS.md  STATS_TECHNICAL_GUIDE.md  Validate.md  jemalloc-tuning.md  nyc311-describegpt-openai-oss-120b.json  nyc311-describegpt-openai-oss-120b.md  nyc311-describegpt-prompt.csv  nyc311-describegpt-prompt.md  nyc311-describegpt-prompt.sql  nyc311-describegpt-spanish.md  nyc311-describegpt-tagvocab.md  nyc311-describegpt.json  nyc311-describegpt.md  nyc311-describegpt.toon  tag-vocabulary.csv  whirlwind_tour.md
docs/audits/: AUDIT_REPORT_2026-02-22.md  AUDIT_REPORT_2026-04-09.md
docs/contributor/: FREQUENCY_QUICK_REFERENCE.md  FREQUENCY_TECHNICAL_GUIDE.md  INDEX_QUICK_REFERENCE.md  INDEX_TECHNICAL_GUIDE.md  PROJECT_TECHNICAL_OVERVIEW.md  README.md  STATS_QUICK_REFERENCE.md  STATS_TECHNICAL_GUIDE.md
docs/describegpt/: Arabic.md  ChristopherWalken.md  EmojiSanta.md  Franglais.md  GenZSlang.md  HansRosling.md  HighValyrian.md  Hindi.md  Italian.md  Japanese.md  Klingon.md  PennsylvaniaDutch.md  Portugese.md  Quenya.md  SnoopDog.md  Spanish.md  Taglish.md  allegheny_discussion3.md  angrystatisticsprofessor.md  check_semanticmd.py  datadict.yaml  mostexpensive6.csv  nyc311-describegpt-everything.md  nyc311-describegpt-mandarin.md  nyc311-describegpt-okf.md  nyc311-describegpt-prompt.csv  nyc311-describegpt-prompt.md  nyc311-describegpt-schema.json  nyc311-describegpt-semanticmd.json  nyc311-describegpt-semanticmd.md  nyc311-describegpt-spanish.md  nyc311-describegpt.json  (+3 more)
resources/: describegpt_defaults.json  describegpt_defaults.toml  describegpt_md_defaults.toml
scripts/: NYC_311_SR_2010-2020-sample-1M-frequency.csv  NYC_311_SR_2010-2020-sample-1M-frequency.json  NYC_311_SR_2010-2020-sample-1M.stats.csv  README.md  benchmarks.sh  boston311-100.freqs.csv  boston311-100.freqs.json  build-pgo.sh  docs-drift-check.py  dt_format.luau  dt_format_py.py  gen_benchmark_viz.py  nyc311-1m.freqs.csv  nyc311-1m.freqs.json  nyc311-1m.freqs.toon  pgo-train.sh  qsv-tune.ps1  qsv-tune.sh  turnaround_time.luau  turnaround_time_py.py  viz-golden-check.sh  viz_golden_cyclic_events.csv
src/: clitypes.rs  config.rs  diskcache.rs  generators_common.rs  help_markdown_gen.rs  llmutil.rs  lookup.rs  main.rs  maindp.rs  mainlite.rs  mcp_skills_gen.rs  minijinja_filters.rs  odhtcache.rs  select.rs  util.rs
tests/: test_100.rs  test_alloc_tuning.rs  test_apply.rs  test_applydp.rs  test_behead.rs  test_blake3.rs  test_cat.rs  test_clean.rs  test_clean_lite.rs  test_color.rs  test_count.rs  test_datefmt.rs  test_dedup.rs  test_denull.rs  test_describegpt.rs  test_diff.rs  test_edit.rs  test_enumerate.rs  test_excel.rs  test_exclude.rs  test_explode.rs  test_extdedup.rs  test_extsort.rs  test_fetch.rs  test_fill.rs  test_fixedwidth.rs  test_fmt.rs  test_foreach.rs  test_frequency.rs  test_geocode.rs  test_geoconvert.rs  test_get.rs  test_headers.rs  test_implode.rs  test_index.rs  test_input.rs  test_join.rs  test_joinp.rs  test_json.rs  test_jsonl.rs  (+38 more)
tools/: repro_moarstats_linux_flake.sh
(+627 files in other folders)
