[package]
name          = "qsv"
version       = "21.1.0"                                                                    #:version
authors       = ["Joel Natividad <joel@datHere.com>"]
description   = "A Blazing-Fast Data-wrangling toolkit."
documentation = "https://github.com/dathere/qsv#qsv-ultra-fast-csv-data-wrangling-toolkit"
homepage      = "https://qsv.dathere.com"
repository    = "https://github.com/dathere/qsv"
readme        = "README.md"
keywords      = ["csv", "geocode", "data-engineering", "etl", "opendata"]
categories    = ["command-line-utilities", "parser-implementations"]
license       = "MIT"
autotests     = false
edition       = "2024"
rust-version  = "1.97"
resolver      = "3"
autobins      = false

include = [
    "src/**/*",
    "LICENSE-MIT",
    "README.md",
    "CHANGELOG.md",
    "resources/luau/vendor/luadate/date.lua",
    "resources/describegpt_defaults.toml",
    # Profile engine resources — bundled via include_str! in
    # src/cmd/profile/profile_spec.rs::EMBEDDED and
    # src/cmd/profile/external_validate.rs::EMBEDDED_RESOURCES. These
    # patterns only affect the `cargo package`/`cargo publish` tarball;
    # they have no effect on builds from a git checkout (CI, local dev,
    # the binary-release workflows), where the files are always present
    # on disk. They're kept so the tarball stays complete (the
    # include_str! resources must ship with it) in case we run
    # `cargo package` or resume crates.io publishing. NOTE: we do not
    # currently support `cargo install qsv` — [patch.crates-io] forks
    # are stripped on publish, yielding an untested dependency tree —
    # so the crates.io build path is not exercised today. The geoconnex
    # paths are tracked here unconditionally — feature gating happens at
    # the Rust level, not at packaging time, and the ~10KB of
    # geoconnex/SHACL Turtle plus the small YAML is harmless to anyone
    # who doesn't compile the feature.
    "resources/profiles/*.yaml",
    "resources/profiles/README.md",
    "resources/dcat-us-v3/**/*",
    "resources/dcat-ap-v3/shacl/*",
    "resources/geoconnex/shacl/*",
]

[[bin]]
name              = "qsv"
test              = true
bench             = false
doctest           = false
path              = "src/main.rs"
required-features = ["feature_capable"]

[[bin]]
name              = "qsvmcp"
test              = true
bench             = false
doctest           = false
path              = "src/main.rs"
required-features = ["qsvmcp"]

[[bin]]
name              = "qsvlite"
test              = true
bench             = false
doctest           = false
path              = "src/mainlite.rs"
required-features = ["lite"]

[[bin]]
name              = "qsvdp"
test              = true
bench             = false
doctest           = false
path              = "src/maindp.rs"
required-features = ["datapusher_plus"]

[[test]]
name = "tests"
path = "tests/tests.rs"

[lints.clippy]
cast_possible_truncation = "allow"
cast_possible_wrap       = "allow"
cast_sign_loss           = "allow"
# things are often more readable this way
needless_raw_string_hashes = "allow"
cast_lossless              = "allow"
module_name_repetitions    = "allow"
type_complexity            = "allow"
zero_prefixed_literal      = "allow"
# correctly used
enum_glob_use   = "allow"
result_unit_err = "allow"
# not practical
similar_names         = "allow"
too_many_lines        = "allow"
struct_excessive_bools = "allow"
# preference
unnecessary_wraps  = "allow"
# false positive
needless_doctest_main = "allow"
# noisy
missing_errors_doc   = "allow"
use_self             = "allow"
cognitive_complexity = "allow"
option_if_let_else   = "allow"
implicit_clone       = "allow"
# pub(crate) documents crate-internal intent; equivalent to pub only because the module is private
redundant_pub_crate = "allow"
# warned
missing_asserts_for_indexing = "warn"

[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
panic         = "abort"
strip         = true

# luau (mlua) requires the unwind panic strategy: when a Luau callback raises an
# error (e.g. qsv_cumsum overflow, an invalid qsv_shellcmd), mlua propagates it
# across the Lua/C boundary via a Rust unwind. With panic = "abort" that unwind
# hits a non-unwinding context and aborts the process instead of surfacing the
# error (see https://github.com/dathere/qsv/issues/3937). luau is only enabled
# in the main `qsv` binary (all_features / distrib_features), so that binary
# MUST be built with this profile. The other binaries (qsvlite, qsvdp, qsvmcp)
# do NOT enable luau and keep panic = "abort" via [profile.release].
[profile.release-luau]
inherits = "release"
panic    = "unwind"

[profile.release-samply]
inherits = "release"
debug    = true
panic    = "unwind"
strip    = false

[dependencies]
anstream = { version = "1.0", optional = true }
arboard = { version = "3.6.1", default-features = false, optional = true }
atoi_simd = "0.18"
base62 = { version = "2.2", optional = true }
base64-simd = { version = "0.8", optional = true }
bitvec = "1"
blake3 = { version = "1.8", features = ["rayon", "mmap"] }
bytemuck = { version = "1.24", features = [
    "latest_stable_rust",
], optional = true }
byteorder = "1.5"
bytes = "1"
cached = { version = "=3.0.0-rc.9", features = [
    "ahash",
    "redb_store",
    "redis_store",
] }
calamine = { version = "0.36", features = ["chrono"] }
censor = { version = "0.3", optional = true }
chrono = { version = "0.4", default-features = false }
chrono-tz = "0.10"
console = { version = "0.16", optional = true }
const_format = "0.2"
cpc = { version = "4", optional = true }
crc32fast = { version = "1.4", optional = true }
crossbeam-channel = "0.5"
crossterm = { version = "0.29", optional = true }
csv = "1.4"
csv-diff = "0.1"
csv-index = "0.1"
csv-nose = { version = "1.0", default-features = false, features = [
    "runtime-dispatch-simd",
] }
csvlens = { version = "0.15", optional = true, default-features = false, features = [
    "clipboard",
] }
csvs_convert = { version = "0.13", default-features = false, features = [
    "converters",
], optional = true }
dns-lookup = { version = "3", optional = true }
directories = "6.0"
dotenvy = "0.15"
dunce = "1"
dynfmt2 = { version = "0.4", default-features = false, features = ["curly"] }
eudex = { version = "0.1", optional = true }
ext-sort = { version = "0.1", default-features = false }
fake = { version = "5", features = [
    "derive",
    "chrono",
    "time",
    "uuid",
    "random_color",
], optional = true }
fast-float2 = "0.2"
flate2 = { version = "1", optional = true }
# same inode/file-id check for `denull --apply`; already in the tree via walkdir
same-file = { version = "1.0.6", optional = true }
foldhash = "0.2"
glob = { version = "0.3", optional = true }
file-format = { version = "0.29", features = ["reader"] }
filetime = "0.2"
flexi_logger = { version = "0.31", features = [
    "async",
    "compress",
    "dont_minimize_extra_stacks",
], default-features = false }
futures = "0.3"
futures-util = "0.3"
gender_guesser = { version = "0.2", optional = true }
geojson = { version = "1", default-features = false, optional = true }
geosuggest-core = { version = "0.8", features = ["geoip2"], optional = true }
geosuggest-utils = { version = "0.8", optional = true }
geozero = { version = "0.15", features = [
    "with-csv",
    "with-shp",
], optional = true }
governor = { version = "0.10", optional = true }
grex = { version = "1.4", default-features = false }
gzp = { version = "2", default-features = false, features = ["snappy_default"] }
hostname-validator = "1.1"
human-panic = "2"
iana-time-zone = "0.1"
indexmap = { version = "2.14", features = ["serde"] }
indicatif = "0.18"
itertools = "0.15"
itoa = "1"
jaq-core = "3"
jaq-json = { version = "2", features = ["serde"] }
jaq-std = "3"
jsonschema = { version = "0.48", features = [
    "resolve-file",
    "resolve-http",
    "tls-aws-lc-rs",
], default-features = false }
libc = "0.2"
log = "0.4"
magika = { version = "1.1", optional = true }
memmap2 = "0.9"
mimalloc = { version = "0.1", default-features = false, features = ["extended"], optional = true }
minijinja = { version = "2", features = [
    "json",
    "loop_controls",
    "speedups",
    "stacker",
    "urlencode",
] }
minijinja-contrib = { version = "2", features = [
    "datetime",
    "pycompat",
    "rand",
    "timezone",
    "unicode_wordwrap",
    "wordcount",
    "wordwrap",
] }
mlua = { version = "0.12", features = [
    "luau",
    "luau-jit",
    "serialize",
], optional = true }
num_cpus = "1"
# object_store backs the `get_cloud` sub-feature (s3://, gs://, az:// sources for
# `qsv get`). default-features=false; only the cloud providers are enabled. Already
# compiled transitively via polars in distrib/qsvmcp/datapusher_plus builds, so the
# marginal cost there is ~zero. See `qsv get --help`.
object_store = { version = "0.13", default-features = false, features = [
    "aws",
    "azure",
    "gcp",
], optional = true }
odht = "0.3"
# opener: open the generated chart/dashboard in the OS default app (browser for
# HTML, image viewer for PNG/SVG/...) for `qsv viz --open`. See the `viz` feature.
opener = { version = "0.8", optional = true }
# ort is needed by magika for ONNX runtime; download-binaries fetches prebuilt binaries
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "tls-rustls"], optional = true }
phf = { version = "0.13", features = ["macros"] }
# plotly backs the `viz` command (charts + auto-dashboard). default-features=false
# keeps the base `viz` build lean; `plotly_embed_js` (via the `viz` feature) makes the
# HTML self-contained, and `static_export_default` (via `viz_static`) adds PNG/SVG/PDF
# export through a webdriver-managed headless browser. NO polars dependency. See #302.
plotly = { version = "0.14.1", default-features = false, optional = true }
pragmastat = "13.0"
polars = { version = "0.54.4", features = [
    "asof_join",
    "avro",
    # "avx512" is x86_64-only — enabled via the
    # [target.'cfg(target_arch = "x86_64")'.dependencies] table below
    # (AVX-512 is an x86 ISA extension; inert on aarch64 et al.)
    # "aws",
    "binary_encoding",
    # "bitwise",
    "business",
    # "cloud",
    "coalesce",
    "cross_join",
    "cse",
    "csv",
    "decompress",
    "diagonal_concat",
    # "dtype-full" replaced by the specific dtypes qsv uses. The small-int
    # dtypes are required: util.rs builds Polars schemas with UInt8/UInt16 for
    # small non-negative integer columns, and sqlp's editable .pschema.json
    # documents Int8/Int16/UInt8/UInt16 as valid cast targets. These kernels
    # are feature-gated in Polars, so they must be enabled explicitly (u8/u16
    # were only surviving transitively; i8/i16 were lost with dtype-full).
    "dtype-i8",
    "dtype-i16",
    "dtype-u8",
    "dtype-u16",
    "dtype-date",
    "dtype-datetime",
    "dtype-time",
    "dtype-duration",
    "dtype-categorical",
    "dtype-decimal",
    # "extract_jsonpath",
    "iejoin",
    "ipc",
    "json",
    "lazy",
    "list_eval",
    "streaming",
    # "object",
    "parquet",
    "performant",
    "pivot",
    "rank",
    "semi_anti_join",
    "serde-lazy",
    "strings",
    # "string_normalize",
    # "string_pad",
    "sql",
    "timezones",
], optional = true }
pyo3 = { version = "0.29", features = ["auto-initialize"], optional = true }
# yaml_serde: serde_yaml fork maintained by The YAML Organization
# https://github.com/yaml/yaml-serde - used by the `profile` command to parse
# CKAN scheming specs (e.g. dataset-druf.yaml).
yaml_serde = { version = "0.10", optional = true }
qsv-dateparser = "0.15"
qsv_docopt = "1.10"
qsv-stats = "0.54"
qsv_currency = "0.7"
qsv-tabwriter = "2"
qsv_vader_sentiment_analysis = { version = "0.2", optional = true }
rand = "0.10"
rand_hc = "0.5"
rand_xoshiro = "0.8"
rayon = "1.12"
redis = { version = "1", features = ["ahash"], default-features = false }
regex = "1"
reqwest = { version = "0.13", features = [
    "blocking",
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "http2",
    "json",
    "rustls",
    "stream",
    "zstd",
], default-features = false }
rfd = { version = "0.17", optional = true }
rmp-serde = { version = "1.3", optional = true }
rust_decimal = { version = "1.42", default-features = false }
sanitize-filename = { version = "0.6", optional = true }
simd-json = "0.17"
self_update = { version = "1.0.0-rc.4", features = [
    "archive-zip",
    "compression-zip-deflate",
    "github",
    "progress-bar",
    "reqwest",
    "rustls",
    "signatures",
], default-features = false, optional = true }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = { version = "0.7", optional = true }
sha2 = { version = "0.11", optional = true }
simdutf8 = "0.1"
spreadsheet-ods = { version = "1", optional = true }
toml = "1.1"
toon-format = { version = "0.5", default-features = false }
smallvec = "1"
snap = "1"
strsim = { version = "0.11", optional = true }
strum = { version = "0.28", features = ["phf"] }
strum_macros = "0.28"
sysinfo = "0.39"
tempfile = "3.27"
terminal-colorsaurus = { version = "1.0", optional = true }
textwrap = { version = "0.16", features = ["terminal_size"] }
thousands = { version = "0.2", optional = true }
threadpool = "1.8"
tikv-jemalloc-ctl = { version = "0.7", optional = true }
tikv-jemallocator = { version = "0.7", optional = true }
# pinned to =0.3.51: time 0.3.52 changed the Parsable::parse signature (added a
# `defaults: Option<Parsed>` arg), breaking the cookie 0.16/0.18 crates in our
# graph. Unpin once cookie ships a compatible release or time yanks/patches 0.3.52.
time = { version = "=0.3.53", optional = true }
titlecase = { version = "3", optional = true }
tokio = { version = "1", features = ["parking_lot", "rt-multi-thread"] }
unicode-width = { version = "0.2", optional = true }
uuid = { version = "1", features = ["v4", "v7"] }
url = "2.5"
webdriver-downloader = { version = "0.16", optional = true }
whatlang = { version = "0.18", optional = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
zip = "8"
zmij = "1.0"
zstd = { version = "0.13", optional = true }

[dev-dependencies]
actix-governor = "0.10"
actix-web = { version = "4.13", default-features = false, features = [
    "compress-brotli",
    "compress-gzip",
] }
assert-json-diff = "2.0"
# for inflating the gzip+base64 payloads viz HTML embeds (see tests/test_viz.rs inflate helpers)
base64-simd = "0.8"
flate2 = "1"
newline-converter = "0.3"

# disable these dev dependencies for testing the `to` command
# as they are expensive and slow down the build/CI tests
# postgres = "0.19"
# rusqlite = { version = "0.32", features = ["bundled"] }

quickcheck  = { version = "1", default-features = false }
serial_test = { version = "3.4", features = ["file_locks"] }

[patch.crates-io]
# use our tweaked fork of csv crate
# the csv crate underpins a lot of qsv's functionality, so every perf tweak helps
# for details, see https://github.com/dathere/qsv/wiki/Tuned-csv-Fork-Benchmarks
csv       = { git = "https://github.com/dathere/rust-csv", branch = "qsv-tuned" }
csv-core  = { git = "https://github.com/dathere/rust-csv", branch = "qsv-tuned" }
csv-index = { git = "https://github.com/dathere/rust-csv", branch = "qsv-tuned" }
# csv = { path = "../rust-csv" }
# csv-core = { path = "../rust-csv/csv-core" }
# csv-index = { path = "../rust-csv/csv-index" }

# use latest upstream now that our PR has been merged
csvlens = { git = "https://github.com/YS-L/csvlens", rev = "6acf060" }

# use our patched fork of csvs_convert to bump dependencies until our PR is merged
csvs_convert = { git = "https://github.com/jqnatividad/csvs_convert", branch = "replace-streaming-stats-redux", optional = true }

# use our patched fork of whatlang to bump hashbrown until our PR is merged
whatlang = { git = "https://github.com/jqnatividad/whatlang-rs", branch = "bump-hashbrown-to-16" }

# Pinned to our stacked feature branch `feature/splom-parcats-traces` (PR
# https://github.com/plotly/plotly.rs/pull/425), a strict superset of the earlier pins:
#   - MapLibre `map`-subplot traces qsv's `viz` maps use (ChoroplethMap, DensityMap,
#     ScatterMap; upstream PRs #406/#410/#415/#416) — now merged into plotly:main
#   - plotly.js 3.7 attribute backfill (legendrank/zorder/fillgradient/... ; PR #421)
#   - new trace types Indicator, Histogram2d, Icicle + layout-level `uirevision` (PR #423)
#   - new trace types Splom, Parcats (PR #425) — used by qsv `viz splom`/`viz parcats`
# When #421/#423/#425 merge upstream, repoint this to a plotly.rs release/main rev.
plotly = { git = "https://github.com/dathere/plotly", branch = "feature/splom-parcats-traces" }

# TRACKING: remove this patch when upstream resolves it (see exit conditions below).
#
# Polars upstream (rev d60ecb0+) patches object_store to this fork to add the
# `with_dns_resolver` method (CachingResolver) used in polars-io's cloud client
# (crates/polars-io/src/cloud/options.rs::get_client_options). A dependency's
# [patch] section is IGNORED by Cargo — only the top-level workspace's patches
# apply — so we must replicate polars' patch here, otherwise polars-io fails to
# compile against the published object_store 0.13.x with:
#   "no method named `with_dns_resolver` found for struct `ClientOptions`".
#
# Why we can't just turn off polars features to avoid this: the cloud module is
# pulled in by a NON-optional dependency edge, not by a feature we control —
#   qsv parquet/ipc/json/streaming  → polars `streaming`  (json & ipc force it)
#     → polars-lazy/streaming → the polars-stream crate
#     → polars-stream/Cargo.toml: `polars-io = { features = ["async","file_cache"] }`
#     → polars-io file_cache → cloud → http → object_store/http
#     → get_client_options() calls `.with_dns_resolver(...)`.
# Since json/ipc/parquet all force `streaming` (and qsv needs all three), there
# is no feature combo that keeps parquet/streaming I/O while dropping the cloud
# module. qsv's own object_store usage (get_cloud) does NOT need this method; the
# patch exists purely to satisfy polars-io. The fork is object_store 0.13.2 plus
# the one extra method, so it's API-compatible with our direct dep and unifies
# the whole tree on one version.
#
# EXIT CONDITIONS (remove this patch when ANY is true):
#   1. `with_dns_resolver` lands in a published object_store release AND polars
#      drops its own [patch.crates-io] object_store override; OR
#   2. polars feature-gates the with_dns_resolver call so non-cloud consumers
#      don't need the forked method; OR
#   3. qsv pins to a polars rev predating the with_dns_resolver change.
object_store = { git = "https://github.com/kdn36/arrow-rs-object-store", rev = "f50a6e5c564b2b5933eca15cd20ff9b5614374a1" }

# use our patched fork until our PR is merged with bumped deps and quick-xml RUSTSEC fixes
spreadsheet-ods = { git = "https://github.com/jqnatividad/spreadsheet-ods", branch = "deps-bump-202607" }

# use our patched fork of webdriver-downloader until our PR is merged fixing
# RUSTSEC-2025-0134: rustls-pemfile is unmaintained
webdriver-downloader = { git = "https://github.com/jqnatividad/webdriver-downloader", branch = "bump-reqwest-and-fantocinni-to-remove-rustls-pemfile-advisory" }

# Polars has a much higher release tempo for its Python bindings compared
# to its underlying Rust library. See https://github.com/pola-rs/polars/releases
# It's qsv's policy to use the latest upstream of polars/py-polars
# to take advantage of Polars' latest unreleased fixes and features.
# Based on what's available at the time of qsv's release, we may need to pin polars to a py-polars tag
# or a specific commit if more revisions have been made since the latest polars/py-polars release.
# When pinning to an unreleased rev, re-add a `polars = { git = ..., rev = ... }`
# entry here AND make sure that rev's own Cargo.toml version matches the
# `version = "x.y.z"` requirement in [dependencies] below — otherwise Cargo
# silently ignores the patch (it shows up as [[patch.unused]] in Cargo.lock) and
# resolves polars from crates.io instead.
# BUILD NOTE: Be sure to set QSV_POLARS_REV to the commit short hash or tag
# of polars/py-polars before building qsv. This allows us to show the polars rev/tag in --version.
# The convention to use for QSV_POLARS_REV is:
# - if we are using a release version of Rust Polars, leave QSV_POLARS_REV empty
# - if we are using a release version of Python Polars, use the Python tag
#   (e.g. py-1.19.0)
# - if we are using a commit hash, separate the tag and commit hash with a colon, in the order of
#   - Python Polars tag
#   - short commit hash
#     (e.g. py-1.19.0:52ea381 to indicate that we are Python Polars 1.19.0,
#      and the commit hash 52ea381)
# ================================
# QSV_POLARS_REV=py-1.42.1:f9f8653
# polars = { git = "https://github.com/pola-rs/polars", tag = "py-1.42.1", optional = true }
polars = { git = "https://github.com/pola-rs/polars", rev = "f9f8653", optional = true }

# Apache DataSketches (t-digest, HLL, Frequent Items) — upstream C++ does not
# support big-endian targets, so we exclude the crate on big-endian builds.
# Code paths that use it are guarded by #[cfg(not(target_endian = "big"))].
[target.'cfg(not(target_endian = "big"))'.dependencies]
datasketches = { version = "0.3", features = ["frequencies", "hll", "tdigest"] }

# AVX-512 is an x86_64-only ISA extension; Polars' avx512 kernels are inert on
# other targets, so gate the feature to x86_64. Cargo unions these features with
# the base `polars` dependency above, so x86_64 builds get avx512 while
# aarch64 (and other arches) don't carry it. Polars dispatches the AVX-512
# kernels at runtime, so enabling it for all x86_64 builds is safe.
[target.'cfg(target_arch = "x86_64")'.dependencies]
polars = { version = "0.54.4", features = ["avx512"], optional = true }

[features]
default = ["jemallocator"]
distrib_features = [
    "feature_capable",
    "apply",
    "fetch",
    "foreach",
    "geocode",
    "geoconnex",
    "get",
    "get_cloud",
    "luau",
    "mcp",
    "polars",
    "profile",
    "synthesize",
    "to",
    "viz_static",
]
all_features = ["distrib_features", "magika", "self_update", "ui"]
qsvmcp = ["feature_capable", "geocode", "get", "get_cloud", "mcp", "polars", "profile", "self_update", "synthesize", "to", "viz_static"]
apply = [
    "base62",
    "base64-simd",
    "censor",
    "cpc",
    "crc32fast",
    "eudex",
    "gender_guesser",
    "qsv_vader_sentiment_analysis",
    "strsim",
    "thousands",
    "titlecase",
    "whatlang",
]
clipboard = ["arboard"]
color = ["anstream", "crossterm", "terminal-colorsaurus", "unicode-width"]
fetch = [
    "console",
    "flate2",
    "governor",
    "serde_urlencoded",
]
foreach = []
# get: fetch tabular data from local/URL/CKAN/cloud sources into a managed,
# zstd-compressed, BLAKE3-hashed, auto-indexed disk cache. Downloads use ETag/
# Last-Modified conditional revalidation with streaming, ranged (parallel)
# fetches for large objects. Backs the `dc:` input prefix usable by any qsv
# command. See `qsv get --help`.
get = ["zstd", "flate2", "glob"]
# get_cloud: adds cloud object-storage sources (s3://, gs://, az://) to `get`,
# via the object_store crate. Opt-in so a bare `-F get` build stays lean;
# included in distrib_features/qsvmcp/datapusher_plus (where polars already
# pulls object_store). See `qsv get --help`.
get_cloud = ["get", "dep:object_store"]
geocode = [
    "bytemuck",
    "dns-lookup",
    "geosuggest-core",
    "geosuggest-utils",
    "geozero",
    "governor",
    "rmp-serde",
]
# luau lookup tables auto-decompress remote .gz/.zlib/.zst/.zip/.sz sources, so
# luau pulls the flate2 + zstd codecs (.zip/.sz need no extra deps). See #1417.
luau = ["mlua", "sanitize-filename", "flate2", "zstd"]
magika = ["dep:magika", "dep:ort"]
mcp = []
polars = ["dep:polars", "bytemuck"]

prompt = ["rfd"]
python = ["pyo3"]
# profile: CKAN scheming-driven metadata extraction (DCAT-US v3 / Croissant).
# Native Rust implementation — minijinja replaces jinja2 for formula
# evaluation; polars (SQL context) backs the SQL-requiring helpers
# (temporal_resolution, guess_accrual_periodicity). yaml_serde parses the
# scheming spec YAML. See `qsv profile --help`.
profile = ["dep:sha2", "polars", "yaml_serde"]
# geoconnex: bundled SHACL-validated linked-data profile for hydrologic
# features (https://docs.geoconnex.us/). Embeds the Geoconnex SHACL
# shapes (~10KB Turtle bundle) so `qsv profile --profile geoconnex
# --validate` can spawn `pyshacl` without external file deps.
# Requires `profile`. Available in qsv (via distrib_features) and as an
# opt-in for qsvdp; NOT in qsvlite or qsvmcp.
geoconnex = ["profile"]
synthesize = ["dep:fake", "dep:time"]
to = ["csvs_convert", "dep:spreadsheet-ods"]
# viz: generate charts (bar/line/scatter/histogram/box) and an auto-dashboard
# (`viz smart`) from CSV data via the plotly crate. Base feature = self-contained
# interactive HTML output (plotly_embed_js); NO polars dependency. `viz smart`
# reuses qsv's in-process stats + frequency caches. See `qsv viz --help` and #302.
viz = [
    "dep:plotly",
    "dep:opener",
    "dep:geojson",
    "plotly/plotly_embed_js",
    "base64-simd",
]
# viz_static: adds static PNG/SVG/PDF/JPEG/WebP export to `viz` via plotly_static,
# which drives a headless Chromium/Firefox (webdriver auto-downloaded). Requires a
# browser at runtime; keep out of big-endian / headless-only publish targets.
viz_static = ["viz", "plotly/static_export_default", "webdriver-downloader"]
lens = ["csvlens"]
lite = []
datapusher_plus = [
    "base64-simd",
    "geocode",
    "get",
    "get_cloud",
    "polars",
    "profile",
    "self_update",
]
ui = ["clipboard", "color", "prompt", "lens"]
jemallocator = ["tikv-jemallocator", "tikv-jemalloc-ctl"]
# feature_capable backs the always-compiled commands that consume lookup tables
# (validate/template/describegpt). Pull flate2 + zstd so their remote lookups
# auto-decompress .gz/.zlib/.zst (alongside the always-available .zip/.sz). #1417.
# base64-simd backs describegpt's multimodal --context-file (base64-encoding image/PDF
# attachments for the LLM); it's always available wherever describegpt is (non-lite).
feature_capable = ["base64-simd", "flate2", "same-file", "zstd"]
nightly = [
    "crc32fast/nightly",
    "pyo3/nightly",
    "rand/simd_support",
    "simd-json/hints",
    "foldhash/nightly",
]

nightly-polars =[
    "polars/nightly",
    "polars/simd",
]

[package.metadata.deb]
maintainer           = "Konstantin Sivakov <konstantin@datHere.com>"
copyright            = "2024, datHere Inc. <www.dathere.com>"
extended-description = """A high performance CSV data-wrangling toolkit."""
depends              = "$auto"
section              = "utility"
priority             = "optional"

# Default feature and asset
features = ["feature_capable"]
assets   = [["target/release/qsv", "/usr/local/bin/", "755"]]

# Conditional features and assets
[package.metadata.deb.variants.lite]
features = ["lite"]
assets   = [["target/release/qsvlite", "/usr/local/bin/", "755"]]

[package.metadata.deb.variants.datapusher_plus]
features = ["datapusher_plus"]
assets   = [["target/release/qsvdp", "/usr/local/bin/", "755"]]
